--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+/* Misc adjustments ****************************************************/
+
+body { overflow-x: hidden;}
+
 /* Header styling ******************************************************/
 
 /* Adjust navbar height */
